잔디가 심어지지 않아요1

--- a/스터디_2023/프로젝트/이마트24/css/style.scss
+++ b/스터디_2023/프로젝트/이마트24/css/style.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 .hello{
-    background-color: aqua;
+    background-color: rgb(214, 228, 92);
         font-size: 20px;
         color: red;
     }
