--- a/스터디_2023/프로젝트/이마트24/css/style.scss
+++ b/스터디_2023/프로젝트/이마트24/css/style.scss
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap');
 @import './_variables.scss', './_mixin.scss';
 
 /* 초기화 */
@@ -11,7 +12,7 @@ a:active{color:#555; text-decoration:none;}
 .wrap{position:relative;width:1280px;margin:0 auto;}
 
 
-
+body{font-family:'Noto Sans KR', sans-serif;font-size: 16px;}
 @include onlyPC{
     body{background-color: burlywood;}
 }
@@ -87,16 +88,32 @@ footer{
     font-size: 12px;
     line-height: 20px;
     .footer_link{
+        font-size: 0;
+        line-height:0;
         li{
             display: inline-block;
+            position: relative;
             a{
+                padding: 0 10px;
                 font-size: 12px;
+                line-height:20px;
                 color: #333;
                 font-weight: 300;
             }
             &:hover a{
                 color: $BrandColor;
             }
+            &:after{
+                content: '';
+                display: block;
+                position:absolute;
+                right:0;
+                top:7px;
+                width: 1px;
+                height:8px;
+                background-color:#999;
+            }
+            &:first-child a{padding-left:0;}
         }
         li.privacy{
             a{
@@ -104,5 +121,17 @@ footer{
             }
             
         }
+    }
+    .family_site{
+        .layer{
+            overflow-y: scroll;
+            height: 160px;
+        }
+    }
+    .footer_con{
+        .title{
+            display: block;
+        }
+        .text{display: block;margin-top:50px;}
     }
 }
