--- a/스터디_2023/프로젝트/이마트24/css/_mixin.scss
+++ b/스터디_2023/프로젝트/이마트24/css/_mixin.scss
@@ -11,10 +11,16 @@
     }
   }
 
-  // bg
-@mixin bg_img($size: null, $url: null) {
+ // bg
+@mixin bg_img($size: null, $url: null, $x:0, $y:0) {
     background-image: url($url);
     background-position: center center;
     background-size: $size;
     background-repeat: no-repeat;
-  }
+}
+// sprite
+@mixin sprite_img( $url: null, $position:0 0) {
+  background-image: url($url);
+  background-position: $position;
+  background-repeat: no-repeat;
+}
