--- a/스터디_2023/프로젝트/이마트24/css/style.scss
+++ b/스터디_2023/프로젝트/이마트24/css/style.scss
@@ -84,6 +84,7 @@ h1{font-size: 0;line-height: 0;}
 }
 
 footer{
+    position: relative;
     background-color: #f4f4f4;
     font-size: 12px;
     line-height: 20px;
@@ -123,9 +124,32 @@ footer{
         }
     }
     .family_site{
+        position: absolute;
+        right: 0;
+        top:0;
+        .family_btn{
+            &:after{
+                display: block;
+                content: '';
+                width: 20px;
+                height: 20px;
+                @include sprite_img('../images/main_sprite.png' , -214px -56px)
+            }
+        }
         .layer{
+            display: none;
             overflow-y: scroll;
+            position: absolute;
+            bottom: 100%;
+            left: 0;
+            width: 170px;
             height: 160px;
+            background-color: #fff;
+            li a{
+                padding:8px 12px;
+                font-size:15px;
+                line-height: 30px;
+            }
         }
     }
     .footer_con{
