--- a/스터디_2023/프로젝트/이마트24/css/style.css
+++ b/스터디_2023/프로젝트/이마트24/css/style.css
@@ -47,11 +47,6 @@ body {
   font-size: 16px;
 }
 
-@media (min-width: 1001px) {
-  body {
-    background-color: burlywood;
-  }
-}
 @media (max-width: 1280px) {
   body {
     background-color: #1900f9;
@@ -130,6 +125,109 @@ h1 {
 }
 .gnb li + li {
   margin-left: 20px;
+}
+
+.lnb .depth1_item {
+  display: inline-block;
+  vertical-align: top;
+}
+.lnb .depth1_item .depth1_text {
+  font-size: 20px;
+  line-height: 30px;
+  color: #333;
+}
+.lnb .depth1_item .depth1_text:hover {
+  color: #f9bb00;
+}
+
+/* slick */
+.slick-slider {
+  position: relative;
+}
+
+.slick-list {
+  overflow: hidden;
+  position: relative;
+}
+
+.slick-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.slick-track:before, .slick-track:after {
+  display: table;
+}
+
+.slick-track:after {
+  clear: both;
+}
+
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+.slick-slide {
+  display: none;
+  float: left;
+}
+
+.slick-slide.slick-loading img {
+  display: none;
+}
+
+.slick-initialized .slick-slide {
+  display: block;
+}
+
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+
+.slick-vertical .slick-slide {
+  display: block;
+}
+
+.visual {
+  position: relative;
+  width: 1440px;
+  margin: 0 auto;
+}
+.visual .slide_list {
+  overflow: hidden;
+  border-radius: 0 0 45px 45px;
+}
+.visual .slide_list .slide_item {
+  width: 100%;
+  height: 495px;
+}
+.visual .slide_list .slide_item a {
+  display: block;
+  height: 100%;
+}
+.visual .slide_list .slide_item a span {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  font-size: 0;
+  line-height: 0;
+}
+.visual .slide_list .slide_item a span.slide_m {
+  display: none;
+}
+.visual .slide_control {
+  position: absolute;
+  left: 105px;
+  bottom: -45px;
+  width: 414px;
+  background-color: #fff;
+  border-radius: 15px;
 }
 
 footer {
