--- a/스터디_2023/프로젝트/이마트24/css/style.scss
+++ b/스터디_2023/프로젝트/이마트24/css/style.scss
@@ -14,7 +14,6 @@ a:active{color:#555; text-decoration:none;}
 
 body{font-family:'Noto Sans KR', sans-serif;font-size: 16px;}
 @include onlyPC{
-    body{background-color: burlywood;}
 }
 @include desktop{
     body{background-color: #1900f9;}
@@ -73,7 +72,7 @@ h1{font-size: 0;line-height: 0;}
             color:#999;
             letter-spacing: -0.025em;
             &:hover{
-                color: #f9bb00;
+                color: $BrandColorYellow;
             }
         }
         & + li{
@@ -81,6 +80,74 @@ h1{font-size: 0;line-height: 0;}
         }
     }
     
+}
+
+.lnb{
+    .depth1_item{
+        display: inline-block;
+        vertical-align: top;
+        .depth1_text{
+            font-size:20px;
+            line-height: 30px;
+            color: $BasicColor;
+            &:hover{
+                color: $BrandColorYellow;
+            }
+        }
+    }
+}
+
+/* slick */
+.slick-slider{position:relative;}
+.slick-list{overflow:hidden; position:relative;}
+.slick-track{position:relative; top:0; left:0; margin-right:auto; margin-left:auto;}
+.slick-track:before, .slick-track:after{display:table;}
+.slick-track:after{clear:both;}
+.slick-loading .slick-track{visibility:hidden;}
+.slick-slide{display:none; float:left;}
+.slick-slide.slick-loading img{display:none;}
+.slick-initialized .slick-slide{display:block;}
+.slick-loading .slick-slide{visibility:hidden;}
+.slick-vertical .slick-slide{display:block;}
+
+.visual{
+    position: relative;
+    width: 1440px;
+    
+    margin: 0 auto;
+    .slide_list{
+        overflow: hidden;
+        border-radius: 0 0 45px 45px;
+        .slide_item{
+            width: 100%;
+            height: 495px;
+            a{
+                display: block;
+                height: 100%;
+                span{
+                    display: block;
+                    width:100%;
+                    height: 100%;
+                    background-repeat: no-repeat;
+                    background-position: center center;
+                    background-size: cover;
+                    font-size: 0;
+                    line-height: 0;
+                }
+                span.slide_m{display: none;}
+            }
+        }
+    }
+    .slide_control{
+        position: absolute;
+        left:105px;
+        bottom: -45px;
+        width: 414px;
+        background-color: #fff;
+        border-radius:15px;
+    }
+    
+ 
 }
 
 footer{
@@ -102,7 +169,7 @@ footer{
                 font-weight: 300;
             }
             &:hover a{
-                color: $BrandColor;
+                color: $BrandColorYellow;
             }
             &:after{
                 content: '';
