--- a/스터디_2023/프로젝트/이마트24/css/style.css
+++ b/스터디_2023/프로젝트/이마트24/css/style.css
@@ -6,303 +6,152 @@
 /*반응형, 브라우저 크기가 1000px 이하일때*/
 /*반응형, 브라우저 크기가 640px 이하일때*/
 /* 초기화 */
-a:link {
-  color: #555;
-  text-decoration: none;
-}
+a:link { color: #555; text-decoration: none; }
 
-a:visited {
-  color: #555;
-  text-decoration: none;
-}
+a:visited { color: #555; text-decoration: none; }
 
-a:hover {
-  color: #555;
-  text-decoration: none;
-}
+a:hover { color: #555; text-decoration: none; }
 
-a:focus {
-  text-decoration: underline;
-}
+a:focus { text-decoration: underline; }
 
-a:active {
-  color: #555;
-  text-decoration: none;
-}
+a:active { color: #555; text-decoration: none; }
 
-#wrapper {
-  position: relative;
-  min-width: 1280px;
-  overflow: hidden;
-}
+#wrapper { position: relative; min-width: 1280px; overflow: hidden; }
 
-.wrap {
-  position: relative;
-  width: 1280px;
-  margin: 0 auto;
-}
+.wrap { position: relative; width: 1280px; margin: 0 auto; }
 
-body {
-  font-family: "Noto Sans KR", sans-serif;
-  font-size: 16px;
-}
+body { font-family: 'Noto Sans KR', sans-serif; font-size: 16px; }
 
-@media (max-width: 1280px) {
-  body {
-    background-color: #1900f9;
-  }
-  #wrapper {
-    min-width: 1000px;
-  }
-  .wrap {
-    width: 1000px;
-  }
-}
-@media (max-width: 1000px) {
-  body {
-    background-color: #00f999;
-  }
-  #wrapper {
-    min-width: 94%;
-  }
-  .wrap {
-    width: 94%;
-  }
-}
-@media (max-width: 640px) {
-  body {
-    background-color: #f9bb00;
-  }
-}
-h1 {
-  font-size: 0;
-  line-height: 0;
-}
+@media (max-width: 1280px) { #wrapper { min-width: 1000px; }
+  .wrap { width: 1000px; } }
 
-.accessibility {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 9999;
-}
-.accessibility a {
-  display: block;
-  overflow: hidden;
-  position: relative;
-  height: 0;
-  text-align: center;
-}
-.accessibility a:focus {
-  height: auto;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  background-color: #000;
-  color: #fff;
-}
+@media (max-width: 1000px) { #wrapper { min-width: 94%; }
+  .wrap { width: 94%; } }
 
-.logo a {
-  width: 113px;
-  height: 20px;
-}
+h1 { font-size: 0; line-height: 0; }
 
-.gnb {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-.gnb li {
-  display: inline-block;
-}
-.gnb li a {
-  font-size: 12px;
-  line-height: 20px;
-  color: #999;
-  letter-spacing: -0.025em;
-}
-.gnb li a:hover {
-  color: #f9bb00;
-}
-.gnb li + li {
-  margin-left: 20px;
-}
+.accessibility { position: fixed; top: 0; left: 0; width: 100%; z-index: 9999; }
 
-.lnb .depth1_item {
-  display: inline-block;
-  vertical-align: top;
-}
-.lnb .depth1_item .depth1_text {
-  font-size: 20px;
-  line-height: 30px;
-  color: #333;
-}
-.lnb .depth1_item .depth1_text:hover {
-  color: #f9bb00;
-}
+.accessibility a { display: block; overflow: hidden; position: relative; height: 0; text-align: center; }
+
+.accessibility a:focus { height: auto; padding-top: 5px; padding-bottom: 5px; background-color: #000; color: #fff; }
+
+.logo a { width: 113px; height: 20px; }
+
+.gnb { position: absolute; top: 0; right: 0; }
+
+.gnb li { display: inline-block; }
+
+.gnb li a { font-size: 12px; line-height: 20px; color: #999; letter-spacing: -0.025em; }
+
+.gnb li a:hover { color: #f9bb00; }
+
+.gnb li + li { margin-left: 20px; }
+
+.lnb .depth1_item { display: inline-block; vertical-align: top; }
+
+.lnb .depth1_item .depth1_text { font-size: 20px; line-height: 30px; color: #333; }
+
+.lnb .depth1_item .depth1_text:hover { color: #f9bb00; }
 
 /* slick */
-.slick-slider {
-  position: relative;
-}
+.slick-slider { position: relative; }
 
-.slick-list {
-  overflow: hidden;
-  position: relative;
-}
+.slick-list { overflow: hidden; position: relative; }
 
-.slick-track {
-  position: relative;
-  top: 0;
-  left: 0;
-  margin-right: auto;
-  margin-left: auto;
-}
+.slick-track { position: relative; top: 0; left: 0; margin-right: auto; margin-left: auto; }
 
-.slick-track:before, .slick-track:after {
-  display: table;
-}
+.slick-track:before, .slick-track:after { display: table; }
 
-.slick-track:after {
-  clear: both;
-}
+.slick-track:after { clear: both; }
 
-.slick-loading .slick-track {
-  visibility: hidden;
-}
+.slick-loading .slick-track { visibility: hidden; }
 
-.slick-slide {
-  display: none;
-  float: left;
-}
+.slick-slide { display: none; float: left; }
 
-.slick-slide.slick-loading img {
-  display: none;
-}
+.slick-slide.slick-loading img { display: none; }
 
-.slick-initialized .slick-slide {
-  display: block;
-}
+.slick-initialized .slick-slide { display: block; }
 
-.slick-loading .slick-slide {
-  visibility: hidden;
-}
+.slick-loading .slick-slide { visibility: hidden; }
 
-.slick-vertical .slick-slide {
-  display: block;
-}
+.slick-vertical .slick-slide { display: block; }
 
-.visual {
-  position: relative;
-  width: 1440px;
-  margin: 0 auto;
-}
-.visual .slide_list {
-  overflow: hidden;
-  border-radius: 0 0 45px 45px;
-}
-.visual .slide_list .slide_item {
-  width: 100%;
-  height: 495px;
-}
-.visual .slide_list .slide_item a {
-  display: block;
-  height: 100%;
-}
-.visual .slide_list .slide_item a span {
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  font-size: 0;
-  line-height: 0;
-}
-.visual .slide_list .slide_item a span.slide_m {
-  display: none;
-}
-.visual .slide_control {
-  position: absolute;
-  left: 105px;
-  bottom: -45px;
-  width: 414px;
-  background-color: #fff;
-  border-radius: 15px;
-}
+.visual { position: relative; width: 1440px; margin: 0 auto; }
 
-footer {
-  position: relative;
-  background-color: #f4f4f4;
-  font-size: 12px;
-  line-height: 20px;
-}
-footer .footer_link {
-  font-size: 0;
-  line-height: 0;
-}
-footer .footer_link li {
-  display: inline-block;
-  position: relative;
-}
-footer .footer_link li a {
-  padding: 0 10px;
-  font-size: 12px;
-  line-height: 20px;
-  color: #333;
-  font-weight: 300;
-}
-footer .footer_link li:hover a {
-  color: #f9bb00;
-}
-footer .footer_link li:after {
-  content: "";
-  display: block;
-  position: absolute;
-  right: 0;
-  top: 7px;
-  width: 1px;
-  height: 8px;
-  background-color: #999;
-}
-footer .footer_link li:first-child a {
-  padding-left: 0;
-}
-footer .footer_link li.privacy a {
-  font-weight: 500;
-}
-footer .family_site {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-footer .family_site .family_btn:after {
-  display: block;
-  content: "";
-  width: 20px;
-  height: 20px;
-  background-image: url("../images/main_sprite.png");
-  background-position: -214px -56px;
-  background-repeat: no-repeat;
-}
-footer .family_site .layer {
-  display: none;
-  overflow-y: scroll;
-  position: absolute;
-  bottom: 100%;
-  left: 0;
-  width: 170px;
-  height: 160px;
-  background-color: #fff;
-}
-footer .family_site .layer li a {
-  padding: 8px 12px;
-  font-size: 15px;
-  line-height: 30px;
-}
-footer .footer_con .title {
-  display: block;
-}
-footer .footer_con .text {
-  display: block;
-  margin-top: 50px;
-}/*# sourceMappingURL=style.css.map */
+.visual .slide_list { overflow: hidden; border-radius: 0 0 45px 45px; -webkit-box-shadow: 80px 80px 128px rgba(0, 0, 0, 0.1); box-shadow: 80px 80px 128px rgba(0, 0, 0, 0.1); }
+
+.visual .slide_list .slide_item { width: 100%; height: 495px; }
+
+.visual .slide_list .slide_item a { display: block; height: 100%; }
+
+.visual .slide_list .slide_item a span { display: block; width: 100%; height: 100%; background-repeat: no-repeat; background-position: center center; background-size: cover; font-size: 0; line-height: 0; }
+
+.visual .slide_list .slide_item a span.slide_m { display: none; }
+
+.visual .slide_control { position: absolute; left: 105px; bottom: -35px; width: 414px; padding: 23px 33px 24px; background-color: #fff; border-radius: 15px; }
+
+.visual .slide_control .control_box { display: inline-block; }
+
+.visual .slide_control .control_box button { width: 24px; height: 24px; font-size: 0; line-height: 0; }
+
+.visual .slide_control .control_box button::before { display: block; width: 12px; height: 12px; background-image: url("../images/main_sprite.png"); background-position: -3px -2px; background-repeat: no-repeat; }
+
+.visual .slide_control .control_box .auto::before { width: 7px; height: 11px; background-image: url("../images/main_sprite.png"); background-position: -43px -2px; background-repeat: no-repeat; }
+
+.visual .slide_control .control_box .slick-play::before { width: 8px; height: 12px; background-image: url("../images/main_sprite.png"); background-position: -43px -20px; background-repeat: no-repeat; }
+
+.visual .slide_control .control_box .prev::before { -webkit-transform: rotate(180deg); transform: rotate(180deg); }
+
+.visual .slide_control .count_box { display: inline-block; }
+
+.visual .slide_control .count_box .progress { display: inline-block; position: relative; width: 156px; -webkit-box-sizing: border-box; box-sizing: border-box; vertical-align: middle; }
+
+.visual .slide_control .count_box .progress .total_bar { display: block; position: relative; height: 2px; background-color: #ebebeb; }
+
+.visual .slide_control .count_box .progress .total_bar .state_bar { display: block; position: absolute; top: 0; left: 0; height: 2px; background-color: #f9bb00; -webkit-transition: width 500ms; transition: width 500ms; }
+
+.visual .slide_control .count_box .progress .total_bar .thumbnail_box { position: absolute; top: 0; left: 0; width: 100%; }
+
+.visual .slide_control .count_box .progress .total_bar .thumbnail_box .slick-dots > li { float: left; }
+
+.visual .slide_control .count_box .progress .total_bar .thumbnail_box .slick-dots > li button { display: block; width: 100%; height: 20px; color: transparent; }
+
+.visual .slide_control .count_box .progress .total_bar .thumbnail_box .slick-dots > li button span { font-size: 0; line-height: 0; }
+
+.visual .slide_control .count_box .current, .visual .slide_control .count_box .total { font-size: 15px; line-height: 24px; color: #999; }
+
+.visual .slide_control .count_box .current { color: #f9bb00; }
+
+.event { margin-top: 127px; }
+
+.event h2 { font-size: 45px; line-height: 50px; color: #333; }
+
+footer { position: relative; background-color: #f4f4f4; font-size: 12px; line-height: 20px; }
+
+footer .footer_link { font-size: 0; line-height: 0; }
+
+footer .footer_link li { display: inline-block; position: relative; }
+
+footer .footer_link li a { padding: 0 10px; font-size: 12px; line-height: 20px; color: #333; font-weight: 300; }
+
+footer .footer_link li:hover a { color: #f9bb00; }
+
+footer .footer_link li:after { content: ''; display: block; position: absolute; right: 0; top: 7px; width: 1px; height: 8px; background-color: #999; }
+
+footer .footer_link li:first-child a { padding-left: 0; }
+
+footer .footer_link li.privacy a { font-weight: 500; }
+
+footer .family_site { position: absolute; right: 0; top: 0; }
+
+footer .family_site .family_btn:after { display: block; content: ''; width: 20px; height: 20px; background-image: url("../images/main_sprite.png"); background-position: -214px -56px; background-repeat: no-repeat; }
+
+footer .family_site .layer { display: none; overflow-y: scroll; position: absolute; bottom: 100%; left: 0; width: 170px; height: 160px; background-color: #fff; }
+
+footer .family_site .layer li a { padding: 8px 12px; font-size: 15px; line-height: 30px; }
+
+footer .footer_con .title { display: block; }
+
+footer .footer_con .text { display: block; margin-top: 50px; }
+/*# sourceMappingURL=style.css.map */
