--- a/스터디_2023/프로젝트/이마트24/css/style.css
+++ b/스터디_2023/프로젝트/이마트24/css/style.css
@@ -5,29 +5,6 @@
 /*반응형, 브라우저 크기가 1280px 이하일때*/
 /*반응형, 브라우저 크기가 1000px 이하일때*/
 /*반응형, 브라우저 크기가 640px 이하일때*/
-/* 초기화 */
-a:link { color: #555; text-decoration: none; }
-
-a:visited { color: #555; text-decoration: none; }
-
-a:hover { color: #555; text-decoration: none; }
-
-a:focus { text-decoration: underline; }
-
-a:active { color: #555; text-decoration: none; }
-
-#wrapper { position: relative; min-width: 1280px; overflow: hidden; }
-
-.wrap { position: relative; width: 1280px; margin: 0 auto; }
-
-body { font-family: 'Noto Sans KR', sans-serif; font-size: 16px; }
-
-@media (max-width: 1280px) { #wrapper { min-width: 1000px; }
-  .wrap { width: 1000px; } }
-
-@media (max-width: 1000px) { #wrapper { min-width: 94%; }
-  .wrap { width: 94%; } }
-
 h1 { font-size: 0; line-height: 0; }
 
 .accessibility { position: fixed; top: 0; left: 0; width: 100%; z-index: 9999; }
@@ -53,6 +30,57 @@ h1 { font-size: 0; line-height: 0; }
 .lnb .depth1_item .depth1_text { font-size: 20px; line-height: 30px; color: #333; }
 
 .lnb .depth1_item .depth1_text:hover { color: #f9bb00; }
+
+footer { position: relative; background-color: #f4f4f4; font-size: 12px; line-height: 20px; }
+
+footer .footer_link { font-size: 0; line-height: 0; }
+
+footer .footer_link li { display: inline-block; position: relative; }
+
+footer .footer_link li a { padding: 0 10px; font-size: 12px; line-height: 20px; color: #333; font-weight: 300; }
+
+footer .footer_link li:hover a { color: #f9bb00; }
+
+footer .footer_link li:after { content: ''; display: block; position: absolute; right: 0; top: 7px; width: 1px; height: 8px; background-color: #999; }
+
+footer .footer_link li:first-child a { padding-left: 0; }
+
+footer .footer_link li.privacy a { font-weight: 500; }
+
+footer .family_site { position: absolute; right: 0; top: 0; }
+
+footer .family_site .family_btn:after { display: block; content: ''; width: 20px; height: 20px; background-image: url("../images/main_sprite.png"); background-position: -214px -56px; background-repeat: no-repeat; }
+
+footer .family_site .layer { display: none; overflow-y: scroll; position: absolute; bottom: 100%; left: 0; width: 170px; height: 160px; background-color: #fff; }
+
+footer .family_site .layer li a { padding: 8px 12px; font-size: 15px; line-height: 30px; }
+
+footer .footer_con .title { display: block; }
+
+footer .footer_con .text { display: block; margin-top: 50px; }
+
+/* 초기화 */
+a:link { color: #555; text-decoration: none; }
+
+a:visited { color: #555; text-decoration: none; }
+
+a:hover { color: #555; text-decoration: none; }
+
+a:focus { text-decoration: underline; }
+
+a:active { color: #555; text-decoration: none; }
+
+#wrapper { position: relative; min-width: 1280px; overflow: hidden; }
+
+.wrap { position: relative; width: 1280px; margin: 0 auto; }
+
+body { font-family: 'Noto Sans KR', sans-serif; font-size: 16px; }
+
+@media (max-width: 1280px) { #wrapper { min-width: 1000px; }
+  .wrap { width: 1000px; } }
+
+@media (max-width: 1000px) { #wrapper { min-width: 94%; }
+  .wrap { width: 94%; } }
 
 /* slick */
 .slick-slider { position: relative; }
@@ -127,31 +155,71 @@ h1 { font-size: 0; line-height: 0; }
 
 .event h2 { font-size: 45px; line-height: 50px; color: #333; }
 
-footer { position: relative; background-color: #f4f4f4; font-size: 12px; line-height: 20px; }
+.event .tab_menu { float: left; width: 285px; margin-top: 78px; }
 
-footer .footer_link { font-size: 0; line-height: 0; }
+.event .tab_menu .tab_item { -webkit-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out; }
 
-footer .footer_link li { display: inline-block; position: relative; }
+.event .tab_menu .tab_item + .tab_item { margin-top: 16px; }
 
-footer .footer_link li a { padding: 0 10px; font-size: 12px; line-height: 20px; color: #333; font-weight: 300; }
+.event .tab_menu .tab_item .tab_btn { position: relative; width: 100%; padding: 15px 40px 15px 50px; border-radius: 5px 5px 5px 20px; font-size: 17px; line-height: 20px; color: #999; text-align: left; }
 
-footer .footer_link li:hover a { color: #f9bb00; }
+.event .tab_menu .tab_item .tab_btn:hover { background-color: #f9bb00; color: #fff; -webkit-box-shadow: 0 8px 24px rgba(249, 187, 0, 0.31); box-shadow: 0 8px 24px rgba(249, 187, 0, 0.31); }
 
-footer .footer_link li:after { content: ''; display: block; position: absolute; right: 0; top: 7px; width: 1px; height: 8px; background-color: #999; }
+.event .tab_menu .tab_item .tab_btn::before { display: block; position: absolute; top: 17px; left: 16px; width: 18px; height: 18px; background-image: url("../images/main_sprite.png"); background-position: -121px -2px; background-repeat: no-repeat; }
 
-footer .footer_link li:first-child a { padding-left: 0; }
+.event .tab_menu .tab_item .tab_btn::after { display: block; position: absolute; top: calc(50% - 3px); right: 30px; width: 7px; height: 9px; background-image: url("../images/main_sprite.png"); background-position: -4px -22px; background-repeat: no-repeat; }
 
-footer .footer_link li.privacy a { font-weight: 500; }
+.event .tab_menu .tab_item:nth-child(2) .tab_btn::before { background-position: -165px -2px; }
 
-footer .family_site { position: absolute; right: 0; top: 0; }
+.event .tab_menu .tab_item:nth-child(3) .tab_btn::before { background-position: -209px -2px; }
 
-footer .family_site .family_btn:after { display: block; content: ''; width: 20px; height: 20px; background-image: url("../images/main_sprite.png"); background-position: -214px -56px; background-repeat: no-repeat; }
+.event .tab_menu .tab_item:nth-child(2).active .tab_btn::before { background-position: -143px -2px; }
 
-footer .family_site .layer { display: none; overflow-y: scroll; position: absolute; bottom: 100%; left: 0; width: 170px; height: 160px; background-color: #fff; }
+.event .tab_menu .tab_item:nth-child(3).active .tab_btn::before { background-position: -187px -2px; }
 
-footer .family_site .layer li a { padding: 8px 12px; font-size: 15px; line-height: 30px; }
+.event .tab_menu .tab_item.active .tab_btn { background-color: #f9bb00; color: #fff; -webkit-box-shadow: 0 8px 24px rgba(249, 187, 0, 0.31); box-shadow: 0 8px 24px rgba(249, 187, 0, 0.31); }
 
-footer .footer_con .title { display: block; }
+.event .tab_menu .tab_item.active .tab_btn::before { background-position: -99px -2px; }
 
-footer .footer_con .text { display: block; margin-top: 50px; }
+.event .tab_menu .tab_item.active .tab_btn::after { background-position: -18px -22px; }
+
+.event .event_tab .tab_content { display: none; float: right; width: 909px; margin-top: -50px; }
+
+.event .event_tab .tab_content.active { display: block; }
+
+.event .event_slide .slide_item { position: relative; text-align: center; margin-right: 18px; }
+
+.event .event_slide .slide_item a { display: block; }
+
+.event .event_slide .slide_item a .category { position: absolute; top: 16px; right: 18px; padding: 2px 7px; border-radius: 8px 8px 8px 0px; background-color: #f9bb00; font-size: 11px; line-height: 20px; font-weight: 300; color: #fff; }
+
+.event .event_slide .slide_item a .img_box { position: relative; padding: 74px 0 30px; border: 4px solid transparent; border-radius: 24px; -webkit-box-sizing: border-box; box-sizing: border-box; -webkit-box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.02); box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.02); -webkit-transition: all 0.1s ease-in-out; transition: all 0.1s ease-in-out; }
+
+.event .event_slide .slide_item a .img_box:after { display: block; position: absolute; top: 0; left: 0; width: calc(100% + 4px); height: calc(100% + 4px); border: 1px solid #ebebeb; border-radius: 24px; }
+
+.event .event_slide .slide_item a .img_box img { -webkit-transform: scale(1); transform: scale(1); -webkit-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out; }
+
+.event .event_slide .slide_item a .text_box .title { height: 44px; margin-top: 17px; font-size: 15px; line-height: 22px; font-weight: 500; color: #333; }
+
+.event .event_slide .slide_item a .text_box .price { font-size: 15px; line-height: 20px; font-weight: 400; letter-spacing: -0.025em; color: #f95a00; }
+
+.event .event_slide .slide_item a:hover .img_box { border: 4px solid #f9bb00; }
+
+.event .event_slide .slide_item a:hover .img_box::after { display: none; }
+
+.event .event_slide .slide_item a:hover .img_box img { -webkit-transform: scale(1.1); transform: scale(1.1); }
+
+.event .event_slide .dots { margin-top: 60px; text-align: center; }
+
+.event .event_slide .dots li { display: inline-block; margin: 0 4px; font-size: 0; line-height: 0; }
+
+.event .event_slide .dots li button { width: 12px; height: 12px; border-radius: 50%; background-color: #f3f3f3; }
+
+.event .event_slide .dots .slick-active button { background-color: #f9bb00; }
+
+.event .more { top: 66px; position: absolute; padding-right: 33px; font-size: 15px; line-height: 24px; color: #333; font-weight: 500; }
+
+.event .more:hover { color: #f9bb00; }
+
+.event .more:after { display: block; position: absolute; top: 0; right: 0; width: 24px; height: 24px; background-image: url("../images/main_sprite.png"); background-position: -69px -2px; background-repeat: no-repeat; }
 /*# sourceMappingURL=style.css.map */
