--- a/스터디_2023/프로젝트/이마트24/css/style.scss
+++ b/스터디_2023/프로젝트/이마트24/css/style.scss
@@ -143,7 +143,7 @@ body{font-family:'Noto Sans KR', sans-serif;font-size: 16px;}
             .current, .total{
                 font-size:15px;
                 line-height:24px;
-                color: #999;
+                color: $gray;
             }
             .current{
                 color:$BrandColorYellow;
@@ -176,7 +176,7 @@ body{font-family:'Noto Sans KR', sans-serif;font-size: 16px;}
                 border-radius:5px 5px 5px 20px;
                 font-size:17px;
                 line-height:20px;
-                color: #999;
+                color: $gray;
                 text-align:left;
                 
                 &:hover{
@@ -371,3 +371,126 @@ body{font-family:'Noto Sans KR', sans-serif;font-size: 16px;}
 
 }
 
+.only_emart{
+    margin-top:195px;
+    .title_box{
+        h2{
+            font-size:45px;
+            line-height:50px;
+            color: $BasicColor;
+        }
+        span{
+            margin-top:14px;
+            font-size:16px;
+            line-height:24px;
+            color:$BrandColorYellow;
+        }
+    }
+    .only_slide{
+        margin-top:78px;
+        font-size:0;
+        line-height:0;
+        .slide_item{
+            position: relative;
+            display: inline-block;
+            width: calc((100% - 49px)/4);
+            margin-right:16px;
+            vertical-align:top;
+            text-align: center;
+            transition: all 0.2s ease-in-out;
+            
+            a{
+                position: relative;
+                overflow: hidden;
+                display: block;
+               
+                border-radius:24px;
+                box-shadow:0px 8px 24px rgba(0,0,0,0.05);
+                .img_box{
+                    overflow: hidden;
+                    height: 294px;
+                    border-radius:24px;
+                    
+                    
+                    
+                    span{
+                        width:100%;height:100%;
+                        @include style_bg;
+                        transition: all 0.2s ease-in-out;
+                        transform: scale(1);
+                    }
+                }
+                .text_box{
+                    padding:0 24px 24px;
+                    .title{
+                        margin-top:13px;
+                        font-size:20px;
+                        line-height:24px;
+                        font-weight:500;
+                        color:$BasicColor;
+                    }
+                    p{
+                        overflow: hidden;
+                        height: 48px;
+                        margin-top:15px;
+                        font-size:17px;
+                        line-height:24px;
+                        color:$gray;
+                    }
+                }
+                &:hover{
+                    text-decoration:none;
+                }
+                &::after{
+                    display: block;
+                    position: absolute;
+                    top:0;
+                    left:0;
+                    width:calc(100% - 2px);
+                    height: calc(100% - 2px);
+                    border:1px solid #ebebeb;
+                    border-radius:24px;
+                }
+                &:hover:after{
+                    width:calc(100% - 8px);
+                    height: calc(100% - 8px);
+                    border:4px solid $BrandColorYellow;
+                }
+            }
+            &:last-child{margin-right:0;}
+            &:hover{
+                transform: translateY(-10px);
+                a{
+                    .img_box{
+                        border-radius:20px;
+                        span{
+                            transform: scale(1.15);
+                        }
+                        
+                    }
+                }
+                
+            }
+        }
+    }
+
+    
+    
+}
+
+.buisness{
+    margin-top:290px;
+    .title_box{
+        h2{
+            font-size:45px;
+            line-height:50px;
+            color: $BasicColor;
+        }
+        span{
+            margin-top:14px;
+            font-size:16px;
+            line-height:24px;
+            color:$BasicColor;
+        }
+    }
+}
