--- a/스터디_2023/프로젝트/이마트24/css/_footer.scss
+++ b/스터디_2023/프로젝트/이마트24/css/_footer.scss
@@ -2,6 +2,7 @@
 
 footer{
     position: relative;
+    padding:90px 0;;
     background-color: #f4f4f4;
     font-size: 12px;
     line-height: 20px;
