--- a/스터디_2023/프로젝트/이마트24/css/style.css
+++ b/스터디_2023/프로젝트/이마트24/css/style.css
@@ -31,7 +31,7 @@ h1 { font-size: 0; line-height: 0; }
 
 .lnb .depth1_item .depth1_text:hover { color: #f9bb00; }
 
-footer { position: relative; background-color: #f4f4f4; font-size: 12px; line-height: 20px; }
+footer { position: relative; padding: 90px 0; background-color: #f4f4f4; font-size: 12px; line-height: 20px; }
 
 footer .footer_link { font-size: 0; line-height: 0; }
 
@@ -225,7 +225,7 @@ body { font-family: 'Noto Sans KR', sans-serif; font-size: 16px; }
 
 .only_emart { margin-top: 195px; }
 
-.only_emart .title_box h2 { font-size: 45px; line-height: 50px; color: #333; }
+.only_emart .title_box h2 { font-size: 48px; line-height: 50px; color: #000; }
 
 .only_emart .title_box span { margin-top: 14px; font-size: 16px; line-height: 24px; color: #f9bb00; }
 
@@ -259,9 +259,97 @@ body { font-family: 'Noto Sans KR', sans-serif; font-size: 16px; }
 
 .only_emart .only_slide .slide_item:hover a .img_box span { -webkit-transform: scale(1.15); transform: scale(1.15); }
 
-.buisness { margin-top: 290px; }
+.buisness { position: relative; margin-top: 290px; padding: 157px 0 203px; }
 
-.buisness .title_box h2 { font-size: 45px; line-height: 50px; color: #333; }
+.buisness::before { display: block; position: absolute; top: 0; left: 216px; width: 1800px; height: 100%; border-radius: 64px 0px 0px 192px; background: -webkit-gradient(linear, left top, left bottom, from(#fece6a), to(#fee6b4)); background: linear-gradient(#fece6a, #fee6b4); }
+
+.buisness .title_box h2 { font-size: 48px; line-height: 50px; color: #000; }
 
 .buisness .title_box span { margin-top: 14px; font-size: 16px; line-height: 24px; color: #333; }
+
+.buisness .buisness_list { margin-top: 40px; font-size: 0; line-height: 0; }
+
+.buisness .buisness_list li { display: inline-block; width: calc((100% - 32px)/3); height: 418px; margin-right: 16px; background-color: #fff; border-radius: 36px; -webkit-transform: translateY(0); transform: translateY(0); -webkit-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out; }
+
+.buisness .buisness_list li:last-child { margin-right: 0; }
+
+.buisness .buisness_list li:hover { -webkit-transform: translateY(-15px); transform: translateY(-15px); }
+
+.buisness .buisness_list li::before { display: block; position: absolute; right: 26px; top: 26px; width: 36px; height: 36px; background-image: url("../images/main_sprite.png"); background-position: -234px -2px; background-repeat: no-repeat; }
+
+.buisness .buisness_list li a { display: block; height: 100%; padding: 24px; }
+
+.buisness .buisness_list li a .title { margin-bottom: 30px; font-size: 28px; line-height: 30px; color: #000; font-weight: 500; }
+
+.buisness .buisness_list li a p { font-size: 17px; line-height: 25px; color: #000; font-weight: 400; }
+
+.store { margin-top: 176px; }
+
+.store h2 { font-size: 48px; line-height: 50px; color: #000; }
+
+.store .search { position: relative; width: 695px; margin-top: 70px; }
+
+.store .search .search_input { position: relative; }
+
+.store .search .search_input .search_bar { width: 100%; padding: 20px 25px; outline: 2px solid #f9bb00; border-radius: 8px 8px 8px 32px; border: 0; font-size: 24px; line-height: 30px; color: #000; }
+
+.store .search .search_input .search_bar:focus { outline: 4px solid #f9bb00; }
+
+.store .search .search_input .search_bar::-webkit-input-placeholder { color: #d1d1d1; }
+
+.store .search .search_input .search_bar:-ms-input-placeholder { color: #d1d1d1; }
+
+.store .search .search_input .search_bar::-ms-input-placeholder { color: #d1d1d1; }
+
+.store .search .search_input .search_bar::placeholder { color: #d1d1d1; }
+
+.store .search .search_input .search_bar::-ms-clear, .store .search .search_input .search_bar::-ms-reveal { display: none; width: 0; height: 0; }
+
+.store .search .search_input .search_bar::-webkit-search-decoration, .store .search .search_input .search_bar::-webkit-search-cancel-button, .store .search .search_input .search_bar::-webkit-search-results-button, .store .search .search_input .search_bar::-webkit-search-results-decoration { display: none; }
+
+.store .search .search_btn { position: absolute; right: 35px; top: calc(50% - 14px); font-size: 0; line-height: 0; width: 30px; height: 28px; background-image: url("../images/main_sprite.png"); background-position: -3px -39px; background-repeat: no-repeat; }
+
+.store .tag_box { width: 695px; margin-top: 20px; font-size: 0; line-height: 0; }
+
+.store .tag_box li { display: inline-block; width: calc((100% - 65px)/5); margin-right: 16px; text-align: center; }
+
+.store .tag_box li:last-child { margin-right: 0; }
+
+.store .tag_box li a { display: block; width: 100%; padding: 11px 0; font-size: 17px; line-height: 20px; font-weight: 500; color: #000; background-color: #ebebeb; border-radius: 16px 0px 16px 16px; }
+
+.store .tag_box li:hover a { background-color: #f9bb00; }
+
+.app { position: relative; margin-top: 165px; }
+
+.app::before { display: block; position: absolute; top: 0; right: 216px; width: 1800px; height: 100%; border-radius: 0 192px 64px 0; background: #f3f3f3; }
+
+.media { margin: 120px 0 160px; }
+
+.media h2 { margin-bottom: 22px; font-size: 20px; line-height: 24px; color: #000; font-weight: 500; }
+
+.media .media_item { position: relative; width: calc((100% - 16px)/2); padding: 32px 32px 40px 32px; background-color: #fff; border-radius: 32px; -webkit-box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05); box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05); }
+
+.media .media_item li { font-size: 0; line-height: 0; }
+
+.media .media_item li a { display: block; }
+
+.media .media_item li a .text { display: inline-block; width: calc(100% - 90px); margin-right: 10px; font-size: 15px; line-height: 24px; color: #999; font-weight: 400; letter-spacing: -0.025em; vertical-align: top; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+
+.media .media_item li a .time { display: inline-block; width: 80px; text-align: right; font-size: 15px; line-height: 20px; color: #999; font-weight: 400; letter-spacing: -0.025em; vertical-align: top; }
+
+.media .media_item li a:hover .text { color: #f9bb00; }
+
+.media .media_item li a:hover .time { color: #f9bb00; }
+
+.media .media_item li + li { margin-top: 15px; }
+
+.media .media_item .more { top: 32px; right: 32px; position: absolute; padding-right: 33px; font-size: 15px; line-height: 24px; color: #333; font-weight: 500; }
+
+.media .media_item .more:hover { color: #f9bb00; }
+
+.media .media_item .more:after { display: block; position: absolute; top: 0; right: 0; width: 24px; height: 24px; background-image: url("../images/main_sprite.png"); background-position: -69px -2px; background-repeat: no-repeat; }
+
+.media .notice { float: left; }
+
+.media .news { float: right; }
 /*# sourceMappingURL=style.css.map */
